--- a/www_root/files/BpmFlowUIFileLibrary/css/style.css
+++ b/www_root/files/BpmFlowUIFileLibrary/css/style.css
@@ -200,7 +200,6 @@ table.report tbody tr:hover td:last-child, .reportComponent table tbody tr:hover
   padding-left: 16px;
   padding-bottom: 24px;
   background-color: rgba(255, 255, 255, 0.85);
-  z-index: 9999;
 }
 
 .box-footer .buttons {
